src/test/resources/acceptance/accept/idExpression.ul
int bar ()
{
    int id1;

    id1;
    id2;
}
