src/test/resources/reject/elseAlone.ul
int bar ()
{
    int id1;

    else {
        ;
    }
}
